ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__SMTP_settings__c/CnP_PaaS__SMTP_settings__c.object-meta.xml
<CustomObject>
    <label>C&amp;P SMTP settings</label>
    <nameField>
        <label>Sendgrid Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P SMTP settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>