ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__SMTP_settings__c/fields/CnP_PaaS__API_key__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__API_key__c</fullName>
    <label>API key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>