ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__SMTP_settings__c/fields/CnP_PaaS__Enable_SSL__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Enable_SSL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable SSL</label>
    <type>Checkbox</type>
</CustomField>