ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__SMTP_settings__c/fields/CnP_PaaS__Outgoing_Mail_Server_SMTP__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Outgoing_Mail_Server_SMTP__c</fullName>
    <label>Outgoing Mail Server(SMTP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>