ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__SMTP_settings__c/fields/CnP_PaaS__Send_grid__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Send_grid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send grid</label>
    <type>Checkbox</type>
</CustomField>