ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__SMTP_settings__c/fields/CnP_PaaS__Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Sender_Email__c</fullName>
    <label>Sender Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>