ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__SMTP_settings__c/fields/CnP_PaaS__Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Sender_Name__c</fullName>
    <label>Sender Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>