ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__SMTP_settings__c/fields/CnP_PaaS__Server_Port_Number_SMTP__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Server_Port_Number_SMTP__c</fullName>
    <label>Server Port Number(SMTP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>