ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__SMTP_settings__c/fields/CnP_PaaS__Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Type__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SMTP Type</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>